Updating docker config

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,4 +11,4 @@ RUN pipenv install --system --deploy
 COPY . .
 RUN chmod a+x docker/entrypoint.sh
 
-ENTRYPOINT ['docker/entrypoint.sh']
+ENTRYPOINT ['/app/docker/entrypoint.sh']
