Fixing DB Config

--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   db:
     image: postgres:10
+    container_name: fastapi_db
     environment:
       - POSTGRES_DB=api
       - POSTGRES_USER=postgres
@@ -10,6 +11,7 @@ services:
     ports:
       - "5433:5432"
   web:
+    container_name: fastapi_web
     build:
       context: ../
       dockerfile: docker/Dockerfile
