--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,6 +8,14 @@ RUN pip install pipenv
 
 RUN pipenv install --system --deploy
 
-COPY . .
+COPY /api ./api
+COPY /docker ./docker
+COPY /tests ./tests
+COPY /migrations ./migrations
+COPY /models ./models
+COPY /settings ./settings
+COPY main.py .
+COPY alembic.ini .
+
 RUN chmod a+x docker/entrypoint.sh
 ENTRYPOINT ["/app/docker/entrypoint.sh"]
